--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,17 +8,21 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 #security
-spring.security.oauth2.resourceserver.jwt.issuer-uri=${COGNITO_ISSUER_URI}
-cognito.issuer-uri=${COGNITO_ISSUER_URI}
-cognito.client-id=${COGNITO_CLIENT_ID}
-cognito.scope=${COGNITO_SCOPES}
-cognito.redirect.url=${COGNITO_REDIRECT_URL}
-cognito.logout.url=${COGNITO_LOGOUT_URL}
-cognito.region=${COGNITO_REGION:us-east-1}
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=${COGNITO_ISSUER_URI}
+#cognito.issuer-uri=${COGNITO_ISSUER_URI}
+#cognito.client-id=${COGNITO_CLIENT_ID}
+#cognito.scope=${COGNITO_SCOPES}
+#cognito.redirect.url=${COGNITO_REDIRECT_URL}
+#cognito.logout.url=${COGNITO_LOGOUT_URL}
+#cognito.region=${COGNITO_REGION:us-east-1}
 # File upload settings (optional)
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-#S3
-aws.s3.bucket=SimpleNotatnik
-aws.s3.prefix=notepad
+# MinIO configuration
+minio.url=${MINIO_URL:http://localhost:9000}
+minio.access-key=${MINIO_ACCESS_KEY:minioadmin}
+minio.secret-key=${MINIO_SECRET_KEY:minioadmin}
+minio.bucket=${MINIO_BUCKET:simplenotatnik}
+minio.prefix=${MINIO_PREFIX:notepad}
+minio.secure=${MINIO_SECURE:false}
