--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,7 +8,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 #security
-#spring.security.oauth2.resourceserver.jwt.issuer-uri=${COGNITO_ISSUER_URI}
+spring.security.oauth2.resourceserver.jwt.issuer-uri: http://keycloak:8080/realms/simple-notatnik
+logging.level.org.springframework.security=TRACE
+logging.level.org.springframework.security.oauth2=TRACE
 #cognito.issuer-uri=${COGNITO_ISSUER_URI}
 #cognito.client-id=${COGNITO_CLIENT_ID}
 #cognito.scope=${COGNITO_SCOPES}
