--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,14 +9,8 @@ spring.jpa.show-sql=true
 
 #security
 spring.security.oauth2.resourceserver.jwt.issuer-uri: http://keycloak:8080/realms/simple-notatnik
-logging.level.org.springframework.security=TRACE
-logging.level.org.springframework.security.oauth2=TRACE
-#cognito.issuer-uri=${COGNITO_ISSUER_URI}
-#cognito.client-id=${COGNITO_CLIENT_ID}
-#cognito.scope=${COGNITO_SCOPES}
-#cognito.redirect.url=${COGNITO_REDIRECT_URL}
-#cognito.logout.url=${COGNITO_LOGOUT_URL}
-#cognito.region=${COGNITO_REGION:us-east-1}
+logging.level.org.springframework.security=INFO
+logging.level.org.springframework.security.oauth2=INFO
 # File upload settings (optional)
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
@@ -28,3 +22,8 @@ minio.secret-key=${MINIO_SECRET_KEY:minioadmin}
 minio.bucket=${MINIO_BUCKET:simplenotatnik}
 minio.prefix=${MINIO_PREFIX:notepad}
 minio.secure=${MINIO_SECURE:false}
+
+#Prometheus
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.prometheus.enabled=true
+management.endpoint.health.show-details=always
